# server/src/controllers/subtask/index.ts
@@ -1,1 +1,2 @@
 export { createSubtask } from './create-subtask';
+export { updateSubtaskStatus } from './update-subtask';
